dev: edit swagger annotation
