# docs/swagger.json
@@ -67,7 +67,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_unbeman_av-prac-task_internal_model.CreateSegment"
+                            "$ref": "#/definitions/github_com_unbeman_av-prac-task_internal_model.SegmentInput"
                         }
                     }
                 ],
@@ -112,7 +112,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_unbeman_av-prac-task_internal_model.User"
+                            "$ref": "#/definitions/github_com_unbeman_av-prac-task_internal_model.UserInput"
                         }
                     }
                 ],
@@ -238,6 +238,20 @@
                 }
             }
         },
+        "github_com_unbeman_av-prac-task_internal_model.SegmentInput": {
+            "type": "object",
+            "properties": {
+                "slug": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_unbeman_av-prac-task_internal_model.Segments": {
+            "type": "array",
+            "items": {
+                "$ref": "#/definitions/github_com_unbeman_av-prac-task_internal_model.Segment"
+            }
+        },
         "github_com_unbeman_av-prac-task_internal_model.User": {
             "type": "object",
             "properties": {
@@ -254,10 +268,15 @@
                     "type": "string"
                 },
                 "segments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_unbeman_av-prac-task_internal_model.Segment"
-                    }
+                    "$ref": "#/definitions/github_com_unbeman_av-prac-task_internal_model.Segments"
+                }
+            }
+        },
+        "github_com_unbeman_av-prac-task_internal_model.UserInput": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
